# comet

./: .build-test  .final-test  .gitignore  .mailmap  .retest  .trigger  CREDITS  NEWS.md  README.md  configure.ac
authd/: notice.h  provider.h  res.h  reslib.h
bandb/: Makefile.am  bandb.c  bantool.c
doc/: connecting-servers.rst  ircd.conf.example  ircd.motd  readme.txt  reference.conf  server-version-info.txt
extensions/: DISCORD_RELAY_README.md  Makefile.am  README  ZNC_README.md  auto_op.c  auto_voice.c  cap_extended_monitor.c  cap_oper.c  cap_realhost.c  chm_anonymous.c  chm_delayjoin.c  chm_history.c  chm_large.c  chm_noinvite.c  chm_noknock.c  chm_nonickchange.c  chm_nonotice.c  chm_regmsg.c  chm_stickyops.c  chm_unfiltered.c  chm_whois.c  conn_fingerprint.c  discord_relay.c  example_module.c  geoip_block.c  hurt.c  identify_msg.c  ip_cloaking.c  ip_cloaking_4.0.c  ip_ratelimit.c  m_banlist.c  m_chanaccess.c  m_chaninfo.c  m_chanlist.c  m_channelstats.c  m_chansearch.c  m_chathistory.c  m_clearchan.c  m_delete.c  m_dice.c  (+38 more)
include/: authproc.h  certfp.h  channel.h  chmode.h  client.h  defaults.h  dns.h  hook.h  hostmask.h  ircd_defs.h  ircd_linker.h  m_info.h  modules.h  msgbuf.h  patchlevel.h  privilege.h  ratelimit.h  s_assert.h  s_conf.h  s_serv.h  snomask.h  stdinc.h  substitution.h  supported.h  tgchange.h
ircd/: Makefile.am  channel.c  chmode.c  client.c  extban.c  hostmask.c  ircd.c  logger.c  main.c  match.c  modules.c  msgbuf.c  operhash.c  parse.c  privilege.c  ratelimit.c  s_serv.c  scache.c  snomask.c  (+4 more)
tools/: Makefile.am  README.mkpasswd
(+55 files in other folders)
